force-app/main/default/objects/WorkOrder/fields/MR_Estimated_Calendar_Days__c.field-meta.xml
<CustomField>
    <fullName>MR_Estimated_Calendar_Days__c</fullName>
    <description>This is the estimate of how many days are needed for the job</description>
    <inlineHelpText>This is the estimate of how many days are needed for the job</inlineHelpText>
    <label>MR Estimated Calendar Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>