force-app/main/default/objects/WorkOrder/fields/MR_Hours_Actual__c.field-meta.xml
<CustomField>
    <fullName>MR_Hours_Actual__c</fullName>
    <inlineHelpText>This is the total actual hours reported by Service Resources</inlineHelpText>
    <label>MR Hours Actual</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>