force-app/main/default/objects/WorkOrder/fields/MR_Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>MR_Hours_Completed__c</fullName>
    <inlineHelpText>This is the total hours of Service Appointments which have been completed</inlineHelpText>
    <label>MR Hours Completed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>