force-app/main/default/objects/WorkOrder/fields/MR_Hours_Created__c.field-meta.xml
<CustomField>
    <fullName>MR_Hours_Created__c</fullName>
    <inlineHelpText>This is the total of all Service Appointment Durations</inlineHelpText>
    <label>MR Hours Created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>