force-app/main/default/objects/WorkOrder/fields/MR_Hours_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>MR_Hours_Scheduled__c</fullName>
    <inlineHelpText>This is the total hours of Service Appointments that have been scheduled</inlineHelpText>
    <label>MR Hours Scheduled</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>