force-app/main/default/objects/WorkOrder/fields/MR_Hours_To_Be_Assigned__c.field-meta.xml
<CustomField>
    <fullName>MR_Hours_To_Be_Assigned__c</fullName>
    <formula>MR_Hours_Created__c -  MR_Hours_Scheduled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the total number of hours of Service Appointments that still need to be assigned to Service Resources.</inlineHelpText>
    <label>MR Hours To Be Assigned</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>