force-app/main/default/objects/WorkOrder/fields/MR_Hours_To_Be_Created__c.field-meta.xml
<CustomField>
    <fullName>MR_Hours_To_Be_Created__c</fullName>
    <formula>MR_Total_Hours_Required__c -  MR_Hours_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Total Duration minus the Hours Created. A positive number here means you may need to create additional service appointments.</inlineHelpText>
    <label>MR Hours To Be Created</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>