force-app/main/default/objects/WorkOrder/fields/MR_Number_of_Techs_Needed__c.field-meta.xml
<CustomField>
    <fullName>MR_Number_of_Techs_Needed__c</fullName>
    <formula>if( MR_Estimated_Calendar_Days__c &gt; 0, (MR_Total_Hours_Required__c / 8) / MR_Estimated_Calendar_Days__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimate of the number of techs needed in order to meet the estimated duration, assuming 8 hour working days</inlineHelpText>
    <label>MR Number of Techs Needed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>