force-app/main/default/objects/WorkOrder/fields/MR_Total_Hours_Required__c.field-meta.xml
<CustomField>
    <fullName>MR_Total_Hours_Required__c</fullName>
    <formula>if(text( DurationType) = &apos;minutes&apos;,  Duration / 60 , Duration )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Work Order Duration in Hours</inlineHelpText>
    <label>MR Total Hours Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>