force-app/main/default/objects/WorkOrder/fields/MR_Trigger_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>MR_Trigger_Cleanup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is set whenever the multi-resource scheduling flow is started. It will delete any draft SAs</description>
    <label>MR Trigger Cleanup</label>
    <type>Checkbox</type>
</CustomField>