force-app/main/default/objects/WorkOrder/fields/MR_Trigger_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MR_Trigger_Date_Time__c</fullName>
    <label>MR Trigger Date Time</label>
    <type>DateTime</type>
</CustomField>